upgrade owo, fix very funny nbt problem